fixed bug on nav on mobile, added button on landingpage

--- a/frontend/src/styles/Header.scss
+++ b/frontend/src/styles/Header.scss
@@ -1,27 +1,29 @@
 #header-part {
-  margin: 0 auto;
-  position: relative;
+  &::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(to right, #f00, blue, #0f0);
+    mix-blend-mode: color;
+    pointer-events: none;
+  }
 
-  h1 {
-    color: white;
-    font-size: var(--font-size-title);
+  .header-container-text {
     position: absolute;
     top: 110px;
-    width: 100%;
-    transform: translateY(-50%);
-    text-align: center;
-    letter-spacing: 0.3rem;
-  }
-}
+    left: 20%;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    color: white;
 
-#header-part::before {
-  content: "";
-  position: absolute;
-  top: 0;
-  right: 0;
-  width: 100%;
-  height: 100%;
-  background: linear-gradient(to right, #f00, blue, #0f0);
-  mix-blend-mode: color;
-  pointer-events: none;
+    h1 {
+      font-size: var(--font-size-title);
+      width: 100%;
+      letter-spacing: 0.3rem;
+    }
+  }
 }
